-
Bug
-
Resolution: Done
-
P4: Low
-
5.0.0 Beta 1
-
Ubuntu 12.04 64-bit
-
Ib5f77daf8d9000eeb18663b2e07e4842a70d22b6
Steps to reproduce:
- Run calendarwidget example
- Navigate to May on the calendar
- Check "May 1 in red" - colour changes to red
- Uncheck "May 1 in red" - colour is still red
- Check "First Friday in blue" - colour changes to blue
- Uncheck "First Friday in blue" - colour is still blue
- is required for
-
QTBUG-26922
Qt 5.0 Beta 1 tasks
-
- Closed
-
| For Gerrit Dashboard: QTBUG-26936 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 33943,1 | Properly reflect format changes in calendarwidget example. | master | qt/qtbase | Status: MERGED | +2 | 0 |